--- a/styles/main.css
+++ b/styles/main.css
@@ -16,13 +16,13 @@
     margin: 30px 15px 30px 30px;
 
 }
-article table{
+.pagina1 article table{
     background-color: gainsboro;
     width: 200px;
     height: 200px;
     border-radius: 50%;
 }
-section{
+.pagina1 section{
     background-color: yellow;
     width: 750px;
     height: 300px;
@@ -30,7 +30,7 @@ section{
     display:  inline-block;
 
 }
-section div {
+.pagina1 section div {
     background-color: red;
     display: inline-block;
     width: 250px;
@@ -39,26 +39,26 @@ section div {
 
 }
 
-div h2{
+.pagina1 div h2{
     background-color: gainsboro;
     width: 250px;
     height: 250px;
     border-radius: 50%;
 }
- div h3{
+ .pagina1 div h3{
     background-color: gainsboro;
     width: 250px;
     height: 250px;
     border-radius: 50%;
 
  }
-footer {
+.pagina1 footer {
      background-color: red;
      width: 700px;
      height: 400px;
      margin: auto;     
  }
- footer aside{
+ .pagina1 footer aside{
     background-color: gainsboro;    
      width: 200px;
      height: 350px;
@@ -66,7 +66,7 @@ footer {
      margin: 15px;
     
  }
- footer aside nav{
+.pagina1 footer aside nav{
 
  
  background-color: #00FF62;    
@@ -74,7 +74,7 @@ footer {
  height: 100px;
  margin: 10px 24px; 
  }
- footer aside div{
+ .pagina1 footer aside div{
 
     background-color:   #00FF62;  
     width: 150px;
@@ -85,7 +85,7 @@ footer {
 
  }
  
- footer aside section{
+ .pagina1 footer aside section{
       
  background-color: #00FF62;    
  width: 100px;
@@ -99,6 +99,154 @@ footer {
  .pagina2{
     background-color: yellow;
     width: 750px;
-    height: 1000px;
+    height: fit-content;
     margin: auto;
  }
+ .pagina2>div{
+     width: 300px;
+     height: 300px;
+     background-color: red;
+     display: inline-block;
+     margin: 20px -6px 10px 51px;
+
+ }
+ .pagina2 div h1{
+     background-color: blanchedalmond;
+     height: 150px;
+     width: 148px;
+     border-radius: 50%;
+     display: inline-block;
+ }
+ 
+.pagina2 div h2{
+    background-color: blanchedalmond;
+    height: 150px;
+    width: 148px;
+    border-radius: 50%;
+    display: inline-block;
+}
+.pagina2 section{
+    width: 350px;
+    height: 200px;
+    background-color: red;
+    margin: 10px 0px 0px 215px;
+}
+.pagina2 section h3{
+    background-color: blanchedalmond;
+    height: 150px;
+    width: 148px;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 21px -9px 0px 17px;
+}
+.pagina2 footer  {
+    width: fit-content;
+    background-color: yellow;
+    padding: 25px 0;
+    margin: 0 auto;
+}
+.pagina2 footer aside{
+    width: 120px;
+    height: 250px;
+    background-color: red;
+    display: inline-block;
+
+}
+.pagina2 footer div{
+    width: 250px;
+    height: 250px;
+    background-color: red;
+    display: inline-block;
+    vertical-align: top;
+}
+.pagina2 footer aside h4{
+    border-radius: 50%;
+    background-color: greenyellow;
+    height: 225px;
+    width: 100px;
+    margin: 10px 10px 10px 10px;
+}
+.pagina2 footer div article{
+    width: 122.5px;
+    height: 250px;
+    display: inline-block;
+    padding: 16.6px 0;
+}
+.pagina2 footer div article h5{
+    border-radius: 50%;
+    background-color: greenyellow;
+    height: 100px;
+    width: 100px;
+    margin: auto;
+    
+}
+.pagina2 footer div article .circle1{
+    margin-bottom: 16.6px;
+}
+.pagina3{
+    width: 750px;
+    height: 1000px;
+    background-color: yellow;
+    margin: auto;
+    padding: 10px 10px;
+    
+}
+.pagina3>div{
+    height: 230px;
+    width: 230px;
+    background-color: red;
+    display: inline-block;
+    margin: 10px 10px 10px 70px;
+    padding: 20px;
+    vertical-align: top;
+    
+
+}
+.pagina3 div section {
+    height: 210px;
+    width: 210px;
+    background-color:greenyellow; 
+    margin: auto;
+    padding: 10px;
+
+}
+.pagina3 div section article {
+    height: 200px;
+    width: 200px;
+    background-color:#4E2FFF; 
+    margin: auto;
+}
+.pagina3 div section article{
+    height: 200px;
+    width: 200px;
+    background-color:#4E2FFF; 
+    margin: auto;
+}
+.pagina3 div section .circulos h1{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background-color: black;
+    display: inline-block;
+    margin: 29px 5px 5px 8px;
+    
+}
+
+.pagina3 div section .circuadrados h2{
+
+    height: 50px;
+    width: 50px;
+    background-color: black;
+    display: inline-block;
+    margin: 31px 4px 0px 11px;
+
+}
+.pagina3 div section .circuadrados h3{
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    background-color: black;
+    margin: 31px 4px 0px 11px;
+    display: inline-block;
+
+}
