--- a/styles/main.css
+++ b/styles/main.css
@@ -248,5 +248,772 @@
     background-color: black;
     margin: 31px 4px 0px 11px;
     display: inline-block;
+}
+
+.pagina3>footer {
+    width: 626px;
+    height: 300px;
+    background-color: red;
+    margin: 14px 54px 9px 50px;
+    padding: 20px;
+    display: inline-block;
+    
+}
+.pagina3>footer div{
+    height:260px;
+    widows: 600;
+    background-color: black;
+    padding: 20px;
+    margin: auto;
+}
+.pagina3>footer div nav{
+    width: 250px;
+    height: 250px;
+    background-color: blue;
+    display: inline-block;
+    margin: 0 10px 0 0;
+    
+}
+.pagina3>footer div article{
+    width: 170px;
+    height: 250px;
+    background-color: #FF00F2;
+    display: inline-block;
+    margin: 0 10px 0 0;
+    
+}
+.pagina3>footer div main{
+    width: 130px;
+    height: 250px;
+    background-color: #00E1FF;
+    display: inline-block;
+}
+.pagina3>footer div nav h1{
+    border-radius: 50%;
+    height: 230px;
+    width: 100px;
+    background-color: brown;
+    display: inline-block;
+    margin: 10px 10px 10px 10px;
 
 }
+.pagina3>footer div article h2{
+    border-radius: 50%;
+    height: 100px;
+    width: 160px;
+    background-color: hotpink;
+    margin: 15px 0px 10px 3px;
+
+}
+.pagina3>footer div main h3{
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    background-color: hotpink;
+    margin: 30px 15px 0px 25px;
+
+}
+.pagina3>section footer{
+    width: 626px;
+    height: 280px;
+    background-color: red;
+    margin: 14px 54px 9px 50px;
+    padding: 20px;
+    display: inline-block;
+}
+   
+.pagina3>section footer article{
+    height:240px;
+    width: 580px;
+    background-color: #5FDEFD;
+    padding: 20px;
+    display: inline-block;
+}
+.pagina3>section footer article nav{
+    height:200px;
+    width: 540px;
+    background-color: #000000;
+    display: inline-block;
+    padding: 20px;
+}
+.pagina3>section footer article nav main{
+    height:160px;
+    width: 500px;
+    background-color: #F190E1;
+    display: inline-block;
+    padding: 20px;
+}
+.pagina3>section footer article nav main h5{
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    background-color: sandybrown;
+    display: inline-block;
+    margin: 30px 5px 20px 10px;
+
+}
+.pagina4{
+    width: 750px;
+    height: 1000px;
+    background-color: yellow;
+    padding: 10px;
+    margin: auto;
+    
+}
+.pagina4 section{
+    width: 730px;
+    height: 280px;
+    background-color: yellow;
+    margin: 10px;
+
+}
+.pagina4 section div{
+    width: 126px;
+    height: 280px;
+    background-color: #020202;
+    display: inline-block;
+}
+.pagina4 section article{
+    width: 80px;
+    height: 280px;
+    background-color: #020202;
+    display: inline-block;
+}
+.pagina4 section div h1{
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    background-color: beige;
+    margin: 35px 0 5px 24px;
+}
+.pagina4 section div h2{
+    border-radius: 50%;
+    height: 200px;
+    width: 80px;
+    background-color: beige;
+    margin: 35px 0 5px 24px;
+}
+.pagina4 section div h3{
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    background-color: beige;
+    margin: 35px 0 5px 24px;
+}
+.pagina4 section div h4{
+    border-radius: 50%;
+    height: 200px;
+    width: 80px;
+    background-color: beige;
+    margin: 35px 0 5px 24px;
+}
+.pagina4 section div h5{
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    background-color: beige;
+    margin: 35px 0 5px 24px;
+}
+.pagina4 footer{
+    width: 220px;
+    height: 290px;
+    background-color: #020202;
+    display: inline-block;
+    margin: 10px;
+    vertical-align: top;
+}
+.pagina4 footer section{
+    width: 200px;
+    height: 50px;
+    background-color: #FFFFFF;
+    display: inline-block;
+    margin: 10px;
+
+}
+.pagina4 footer section h1{
+    border-radius: 50%;
+    width: 150px;
+    height: 50px;
+    background-color: #00A2FF;
+    margin: 0px 10px 0px 25px;;
+
+}
+.pagina4 footer article{
+    width: 90px;
+    height: 200px;
+    background-color: #FFFFFF;
+    display: inline-block;
+    margin: 0px 10px 10px 10px;
+}
+.pagina4 footer article h2{
+    border-radius: 50%;
+    width: 80px;
+    height: 200px;
+    background-color: #00FF80;
+    display: inline-block;
+ margin: 0px 10px 10px 5px;
+}
+.pagina4 footer div{
+    width: 90px;
+    height: 200px;
+    background-color: #FFFFFF;
+    display: inline-block;
+    margin: 0px 0px 10px 0px;
+}
+.pagina4 footer div h3{
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    background-color: #00FF80;
+   
+ margin: 10px 0px 0px 5px;
+}
+.pagina4>div{
+    width: 455px;
+    height: 249px;
+    background-color: red;
+    margin: 10px -0 -0 0px;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: top;
+ 
+
+}
+.pagina4>div article{
+    height: 209px;
+    width: 413px;
+    background-color: black;
+    padding: 20px;
+    margin: auto;
+}
+.pagina4>div article nav{
+    width: 415px;
+    height: 209px;
+    background-color: blue;
+    display: inline-block;
+    margin: 0 10px 0 0;
+}
+.pagina4>div article nav main{
+    height: 100px;
+    width: 100px;
+    background-color: beige;
+    display: inline-block;
+    margin: 50px 10px 0px 20px;
+
+}
+.pagina4>div article nav main h1{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background-color: #00D9FF;
+    display: inline-block;
+    margin: 25px 10px 0px 20px;
+
+}
+.pagina4>nav {
+    width: 730px;
+    height: 280px;
+    background-color:yellow;
+    margin: 10px;
+}
+.pagina4>nav article{
+    width: 225px;
+    height: 280px;
+    background-color: #000000;
+    display: inline-block;
+    margin: 0 5px 0 10px;
+}
+.pagina4>nav article div{
+    width: 200px;
+    height: 240px;
+    background-color: #FDFDFD;
+    display: inline-block;
+    margin: 17px 9px 2px 13px;
+}
+.pagina4>nav article div main{
+    width: 180px;
+    height: 100px;
+    background-color: #00FF2A;
+    margin: 14px 6px 12px 10px;
+}
+.pagina4>nav article div main h1{
+    border-radius: 50%;
+    width: 162px;
+    height: 100px;
+    background-color: #00AEFF;
+    margin: 14px 6px 12px 10px;
+}
+.pagina4>nav article div h2{
+    border-radius: 50%;
+    width: 162px;
+    height: 100px;
+    background-color: #00AEFF;
+    margin: 14px 6px 12px 20px;
+}
+.pagina4>nav article div h5{
+    border-radius: 50%;
+    width: 200px;
+    height: 240px;
+    background-color: #00AEFF;
+    margin: auto;
+}
+.pagina4>article{
+    width: 691px;
+    height: 88px;
+    background-color: #0A0A0A;
+    margin: 10px;
+    padding: 0 0 0 33px;
+}
+.pagina4>article nav{
+    height: 70px;
+    width: 70px;
+    background-color: blanchedalmond;
+    display: inline-block;
+    margin: 10px 58px 10px 7px;
+}
+.pagina4>article h4{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background-color: #FF0404;
+    margin: 10px;
+
+}
+.pagina4>article h1{
+    border-radius: 50%;
+    height: 31px;
+    width: 61px;
+    background-color: #FF0404;
+    margin: 3px;
+}
+.pagina5{
+    width: 750px;
+    height: 1000px;
+    background-color: yellow;
+    padding: 10px;
+    margin: auto;
+}
+.pagina5 footer{
+    height: 750px;
+    width: 246px;
+    background-color: black;
+    display: inline-block;
+    vertical-align: top;
+
+}
+.pagina5 footer div{
+    height: 175px;
+    width: 114px;
+    background-color: azure;
+    margin: 10px;
+    display: inline-block;
+    vertical-align: top;
+}
+.pagina5 footer div h1{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: gold;
+    margin: 10px 20px;
+}
+.pagina5 footer nav{
+    height: 175px;
+    width: 83px;
+    background-color: azure;
+    margin: 10px;
+    display: inline-block;
+    vertical-align: top;
+}
+.pagina5 footer nav h2{
+    height: 152px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: gold;
+    margin: 10px 5px;
+}
+.pagina5 footer article{
+    width: 223px;
+    height: 83px;
+    background-color: azure;
+    margin: 10px;
+    display: inline-block;
+    vertical-align: top;
+}
+.pagina5 footer article h3{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: gold;
+    margin: 6px 19px;
+    display: inline-block;
+}
+.pagina5 footer section{
+    height:223px ;
+    width: 223px;
+    background-color: beige;
+    margin: 10px;
+}
+.pagina5 footer section h4{
+    border-radius: 50%;
+    background-color: gold;
+    height: 80px;
+    width: 80px;
+    display: inline-block;
+    margin: 11px 13px
+
+}
+.pagina5 footer section h5{
+    background-color: gold;
+    height: 60px;
+    width: 60px;
+    display: inline-block;
+    margin: -30px 77px;
+
+}
+.pagina5 footer section h6{
+    background-color: gold;
+    height: 50px;
+    width: 200px;
+    display: inline-block;
+    margin: 37px 10px
+}
+.pagina5 footer main aside {
+    height: 193px;
+    width: 103px;
+    background-color: #FFFFFF;
+    display: inline-block;
+    margin: 5px 5px 3px 10px;
+}
+.pagina5 footer main aside h1{
+    border-radius: 50%;
+    height: 171px;
+    width: 80px;
+    background-color: black;
+    display: inline-block;
+    margin: 10px;
+}
+.pagina5 .ultimo article{
+    height: 100px;
+    width: 120px;
+    background-color: blanchedalmond;
+    margin: 10px;
+
+}
+.pagina5 .ultimo article h1{
+    border-radius: 50%;
+    background-color: blueviolet;
+    height: 100px;
+    width: 80px;
+    margin: 0px 20px;
+}
+.pagina5 .ultimo div{
+    height:  100px;
+    width: 80px;
+    background-color: bisque;
+    margin: 10px;
+
+}
+.pagina5 .ultimo div h2{
+    border-radius: 50%;
+    background-color: blueviolet;
+    height: 100px;
+    width: 80px;
+    margin: 0px 1px
+}
+.pagina5 .ultimo nav {
+    height: 155px;
+    width: 223px;
+    background-color: blanchedalmond;
+    margin: 10px 10px;;
+}
+.pagina5 .ultimo nav h3{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    background-color: gold;
+    margin: 7px 23px;
+    display: inline-block;
+}
+.pagina5 .ultimo nav aside{
+    height: 70px;
+    width: 198px;
+    margin: 10px 10px;
+    background-color: greenyellow;
+
+}
+.pagina5 .ultimo nav aside h4{
+    border-radius: 50%;
+    height: 51px;
+    width: 176px;
+    margin: 10px 10px;
+    background-color: #020202;
+
+}
+.pagina5 .ultimo nav h5{
+    border-radius: 50%;
+    height: 65px;
+    width: 96px;
+    margin: -5px 60px;
+    background-color: #020202;
+}
+.pagina5 .ultimo main{
+    height: 259px;
+    width: 100px;
+    background-color: blanchedalmond;
+    margin: 10px 10px;
+    display: inline-block;
+}
+.pagina5 .ultimo main h6{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: #0485FF;
+    margin: 26px 21px;
+}
+.pagina5>div{
+    height: 237px;
+    width: 741px;
+    background-color: black;
+    margin: 10px 2px;
+}
+.pagina5>div nav {
+    height: 216px;
+    width: 217px;
+    background-color: beige;
+    margin: 10px;
+    display: inline-block;
+}
+.pagina5>div nav h1{
+    border-radius: 50%;
+    background-color: gold;
+    height: 80px;
+    width: 80px;
+    display: inline-block;
+    margin: 11px 13px;
+
+}
+
+.pagina5>div nav h2{
+    background-color: gold;
+    height: 50px;
+    width: 200px;
+    display: inline-block;
+    margin: 37px 10px;
+    
+}
+.pagina5>div footer{
+    height: 214px;
+    width: 238px;
+    background-color: #FFFFFF;
+    margin: 10px 10px;
+}
+.pagina5>div footer main{
+    height: 192px;
+    width: 216px;
+    background-color: #006EFF;
+    margin: 10px 10px;
+}
+.page6{
+    background-color: rgb(255, 255, 255);
+   
+    padding: 10px 10px 10px 10px;
+    margin: auto;
+  }
+  .page6 section{
+    background-color: rgb(0, 0, 0);
+    width: 203px;
+    height: 208px;
+    margin: 10px 10px 10px 30px;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+    vertical-align: top;
+  }
+  .page6 section li{
+    width: 50px;
+    height: 50px;
+    background-color: #FC6500;
+    display: inline-block;
+    margin: 50px 5px 10px 40px;
+    padding: 0px 0px 0px 0px;
+    border-radius: 50%
+  }
+  .page6 section a{
+    background-color: rgb(146, 253, 180);
+    width: 14px;
+    height: 40px;
+    margin: auto -1px;
+    display: inline-block;
+    padding: 10px 10px 10px 40px;
+    vertical-align: top;
+  }
+  .page6 h2{
+    background-color: rgb(0, 238, 255);
+    width: 417px;
+    height: 251px;
+    margin: 10px 10px 10px 40px;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+    vertical-align: top;
+  }
+  .page6 h2 div{
+    background-color: #3300FF;
+    width: 65px;
+    height: 76px;
+    margin: 79px 10px 10px 35px;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+    vertical-align: top;
+  }
+  .page6 h2 div li{
+    width: 51px;
+    height: 54px;
+    background-color: #C800FF;
+    display: inline-block;
+    margin: 0px 10px 10px 8px;
+    padding: 0px 0px 20px 0px;
+    border-radius: 50%
+  }
+  .page6 h3{
+    background-color: #E5FF00;
+    width: 233px;
+    height: 400px;
+    margin: 10px 10px 10px 10px;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+    vertical-align: top;
+  }
+  .page6 h3 ol{
+    width: 120px;
+    height: 120px;
+    background-color: #000000;
+    display: inline-block;
+    margin: 5px 10px 0px 70px;
+    padding: 0px 0px 0px 0px;
+    border-radius: 50%
+  }
+  .page6 h3 section{
+    width: 100px;
+    height: 30px;
+    background-color: #FFFFFF;
+    display: inline-block;
+    margin: 5px 10px 10px 90px;
+    padding: 0px 0px 20px 0px;
+    border-radius: 50%
+  }
+  .page6 h3 article{
+    background-color: rgb(9, 49, 61);
+    width: 200px;
+    height: 350px;
+    margin: 10px 10px 10px 10px;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+    vertical-align: top;
+  }
+  .page6 h3 article li{
+    width: 140px;
+    height: 140px;
+    background-color: rgb(255, 0, 0);
+    display: inline-block;
+    margin: 5px 10px 10px 50px;
+    padding: 0px 0px 20px 0px;
+    border-radius: 50%
+  }
+  .page6 h3 div{
+    background-color: #D6FF42;
+    width: 163px;
+    height: 120px;
+    margin: 10px 10px 10px 40px;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+    vertical-align: top;
+  }
+  .page6 h3 div li{
+    width: 100px;
+    height: 100px;
+    background-color: #00CCFF;
+    display: inline-block;
+    margin: -2px 10px 10px 28px;
+    padding: 0px 0px 20px 0px;
+    border-radius: 50%;
+  }
+  .page6 h3 nav{
+    background-color: #F5FFB9;
+    width: 139px;
+    height: 200px;
+    margin: 10px 10px 10px 40px;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+    vertical-align: top;
+  }
+  .page6 h3 nav a{
+    width: 90px;
+    height: 75px;
+    background-color: #86E619;
+    display: inline-block;
+    margin: 1px 10px 10px 19px;
+    padding: 0px 0px 20px 0px;
+    border-radius: 50%;
+    
+  }
+  .page6 h4{
+    background-color: #D6A51E;
+    width: 250px;
+    height: 415px;
+    margin: 10px 10px 10px 10px;
+    display: inline-block;
+   
+    vertical-align: top;
+  }
+  .page6 h4 div{
+    width: 200px;
+    height: 200px;
+    background-color: #6338C7;
+    display: inline-block;
+    margin: 80px 10px 10px 30px;
+    padding: 0px 0px 20px 0px;
+    border-radius: 50%
+  }
+  .page6 main{
+    background-color: #087A28;
+    width: 1064px;
+    height: 620px;
+    padding: 10px 10px 10px 10px;
+    margin: 10px 10px 10px 10px;
+    display: inline-block;
+  
+  }
+  .page6 main section nav{
+    width: 50px;
+    height: 30px;
+    background-color: #470658;
+    display: inline-block;
+    margin: 50px 40px 10px 80px;
+    padding: 0px 0px 20px 0px;
+    border-radius: 50%
+  }
+  .page6 main h4{
+    background-color: #B8160A;
+    width: 482px;
+    height: 250px;
+  
+    margin: 10px 10px 10px 30px;
+    display: inline-block;
+  }
+  .page6 main h4 li{
+    background-color: #201716;
+    width: 421px;
+    height: 180px;
+   
+    margin: 30px 10px 10px 30px;
+    display: inline-block;
+  }
+  .page6 main h4 li a{
+    width: 100px;
+    height: 100px;
+    background-color: #E418DA;
+    display: inline-block;
+    margin: 49px 5px 10px 23px;
+    border-radius: 50%;
+  
+    border-radius: 50%
+  }
